<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usernameHint">Email</string>
    <string name="passwordField">Password</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="SubmitBtn">Submit</string>
    <string name="cancelBtn">Cancel</string>
    <string name="confirmHint">Confirm your password</string>
    <string name="profileBTN">View Profile</string>
    <string name="jobListBTN">View Jobs</string>
    <string name="appLogo">appli.</string>
    <string name="nameLabel">Name:</string>
    <string name="addressHint">Enter your Address</string>
    <string name="emailHint">Enter your Email</string>
    <string name="phoneHint">Enter Contact Number</string>
    <string name="username2Field">Enter your Surname</string>
    <string name="locationLabel">Location:</string>
    <string name="emailLabel">Email:</string>
    <string name="placeholderText">placeholder</string>
    <string name="bioHint">Enter Some Information About Yourself</string>
    <string name="bioLabel">Bio:</string>
    <string name="phoneLabel">Phone:</string>
    <string name="login_subtitle">COMPANION APP</string>
    <string name="searchText">Search</string>
    <string name="searchFieldHint">Enter Job</string>
    <string name="summary_text">Summary:</string>

</resources>
