<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.loginapp.MainActivity" >

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <Button
        android:id="@+id/submitRegistrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressField"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="47dp"
        android:onClick="onSubmitRegistration"
        android:text="@string/SubmitBtn" />

    <Button
        android:id="@+id/cancelRegistrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submitRegistrationBtn"
        android:layout_alignBottom="@+id/submitRegistrationBtn"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/submitRegistrationBtn"
        android:onClick="onCancelRegistration"
        android:text="@string/cancelBtn" />

    <EditText
        android:id="@+id/emailInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:ems="10"
        android:hint="@string/usernameHint" />
        <requestFocus />

    <EditText
        android:id="@+id/username2Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/emailInputField"
        android:layout_below="@+id/emailInputField"
        android:ems="10"
        android:hint="@string/username2Field" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/username2Field"
        android:ems="10"
        android:hint="@string/passwordField"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/passwordField"
        android:ems="10"
        android:hint="@string/confirmHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/phoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/confirmField"
        android:layout_below="@+id/confirmField"
        android:ems="10"
        android:hint="@string/phoneHint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/phoneField"
        android:layout_below="@+id/phoneField"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/addressField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:ems="10"
        android:hint="@string/addressHint"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/bioField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitRegistrationBtn"
        android:layout_alignLeft="@+id/addressField"
        android:layout_alignRight="@+id/addressField"
        android:layout_below="@+id/addressField"
        android:ems="10"
        android:hint="@string/bioHint"
        android:inputType="textMultiLine" />

        


</RelativeLayout>