<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/applibgresize"
    tools:context="com.example.loginapp.MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/buttonshape"
        android:onClick="onLogin"
        android:text="@string/loginBtn"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/appLogo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#a4bccd"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailInputField"
        android:layout_below="@+id/emailInputField"
        android:layout_marginTop="14dp"
        android:background="#ffffff"
        android:alpha="0.5"
        android:ems="20"
        android:gravity="center"
        android:hint="@string/passwordField"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/emailInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/appLogo"
        android:layout_marginTop="50dp"
        android:alpha="0.5"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/usernameHint" />

    <TextView
        android:id="@+id/subtitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/appLogo"
        android:layout_below="@+id/appLogo"
        android:textColor="#a4bccd"
        android:alpha="0.5"
        android:textSize="14.5sp"
        android:text="@string/login_subtitle" />

</RelativeLayout>